# rag

./: README.md  graph.text  graph.txt  pyproject.toml
files/: Jira_Ticket_Template.docx  result.txt  test1.txt
rag/: __init__.py  file_loader.py  main.py  prompts.py  rag.py
vectorstore/: chroma.sqlite3
